[SA-00414] MediaPlayer: rework the MediaPlayer technical implementation
[SA-00353] Release 0.7.0.0 Tasks
+ SallyAPI: fonts are drawn ugly
+ Sally hangs when closing the app
+ MediaPlayer: file not found creates deadlock
[NO-TICKET] SallyAPI: added new special key commands for arrow keys
[NO-TICKET] SallyAPI: CFileBrowser: added methode to jump directly to a folder


Changelog 0.6.6.1
-----------------
[SA-00333] MediaPlayer: crash on slow hardware
[SA-00230] Sally: flash controls to make a visual feedback for the mouse up


Changelog 0.6.5.10
------------------
[SA-00314] Sally Tools: Tools improvements
+ redesign the config dialog
+ make menu icons smaller
+ invert on / off logic for applications
+ on installation error refer to the homepage
+ source cleanup
[SA-00394] MediaPlayer: Improve Album Browser
+ double click would not work any longer
+ add character buttons to directly jump to a album character
[SA-00392] ImageBrowser: Zufallsgenerator - Listenproblem
[SA-00391] ImageBrowser: improve speed while DB create
[SA-00339] MediaPlayer: improve speed while DB create
[SA-00395] SallyTools: updater is not executing the SallyConfigUpdater correct


Changelog 0.6.5.8
-----------------
fixed admin service


Changelog 0.6.5.6
-----------------
[SA-00376] Facebook: user names are cut off
[SA-00378] MediaPlayer: Use the new CListViewExt class for the Album Browser
[SA-00379] MediaPlayer: Add the Album Interpret to the Info popup
[SA-00380] Sally: Facebook Connection error is not translated
[SA-00381] MediaPlayer: add "reset" button to the album browser search
[SA-00384] MediaPlayer: MediaPlayer Improvements
+ Album Browser: Album Track List - make the header label higher
+ Album Browser: Make the album rows smaller
[SA-00383] Sally: XML parser error should not close Sally
[SA-00386] Sally Tools: plugin update should first delete old plugin (folder)
[SA-00385] Sally: increase the minimal size of the sally window: 1024 x 600


Changelog 0.6.5.5
-----------------