@@ -131,6 +131,8 @@
 #define GUI_SCROLLBAR_CLICKED							1021
 #define GUI_SCROLLBAR_MOVED								1022
 
+#define GUI_BREADCRUMB_START_CLICKED					1025
+
 #define GUI_MOUSEMOVE_RIGHT								1030
 #define GUI_MOUSEMOVE_LEFT								1031
 #define GUI_MOUSEMOVE_UP								1033
